@@ -1,1 +1,2 @@
 DIST arrayfire-3.0.20150914.tar.gz 29172 SHA256 30d43c09d67dc9a2e93a2759287a37a288fadd4bec21c00361d84ff2417b04d0 SHA512 fcca14568b0e1491ca59df4fe003e53f3b387f1efd535a93deebb067c942b112077e4d61138d21cd0904d584141c3d023edcc62499f3f89ec68d982d1f4cfab1 WHIRLPOOL e181df3fcafdbbbe2bea74ff63d4e6bfc253d6fa27e49540d9b790ae4c31c289fbd94a3a5cd668240fc414be85cb22683f64b0f4ca842ce9c0d5e0769e8adf4d
+DIST arrayfire-3.1.20151111.tar.gz 35015 SHA256 6992ac07645dbafbfda0c73a2c3eb94ba03d6a941593d94da42126d6310f0633 SHA512 7a3e359eaf61e7d8234451671941f37f613a77ea4d1d22ac7dc6cd9a0b40a2ca098eb03b8d0778537c5012aca6cb5bc986a056b3cdf15e7d9f23417bf3c6a60d WHIRLPOOL 1c1ba68e54e285b80c5c09328872f27a2e9cb8d002c13883ef4e66c94ebbc18a12bf5fe683215922af5c9d5ac09f2957010a1ef2145fded1e838a632077658c5
